--- a/less/cleenmain.less
+++ b/less/cleenmain.less
@@ -17,3 +17,7 @@
 @import "./tab/player-combat-style.less";
 @import "./tab/player-notes-style.less";
 @import "./tab/player-equipment-style.less";
+
+
+@import "./chat/rollDialog.less";
+@import "./chat/rollResult.less";
