--- a/less/config.less
+++ b/less/config.less
@@ -20,6 +20,8 @@
 .MuseoSlab(){
     font-family: "Museo Slab";
 }
+@default-font: "Museo Slab";
+
 //colors
 @title-color: #693d25;
 @font-soft-color: #8e8d8d;
