--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -1,8 +1,9 @@
 <div class="dialog">
-  
-  <div class="introImg" style="background-image: url('{{targetData.actor.data.img}}')"></div>
-  <div class="introtext">
-    {{skillData.introText}} 
+  <div class="intro">
+    <div class="introImg" style="background-image: url('{{skillData.actingCharImg}}')"></div>
+    <div class="introtext">
+      {{skillData.introText}} 
+    </div>
   </div>
   <div class="formula">
     {{skillData.skillRollFormula}}
@@ -12,8 +13,69 @@
     <label>{{localize "cleenmain.dialog.rollmodifier"}}</label><input id="rollmodifier" value="" type="text" data-dtype="Text"/>
   </div>
 
-  <div class="simplebox">
+  <div class="rollmodifier">
     <label>{{localize "cleenmain.dialog.heroism"}}</label><input type="checkbox" id="heroism" />
   </div>
-
+  {{#if skillData.weaponRoll}}
+  <div class="bonus">
+    <h2>{{localize "cleenmain.dialog.bonus"}}</h2>
+  </div>
+  <div class="bonus-block">
+    <div class="bonus-line tooltip">
+      <label for="murderous">{{localize "cleenmain.bonus.murderous.label"}}</label>
+      <input type="number" id="murderous" name="murderous" min="0" max="10" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.bonus.murderous.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="manytargets">{{localize "cleenmain.bonus.manytargets.label"}}</label>
+      <input type="number" id="manytargets" name="manytargets" min="0" max="1" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.bonus.manytargets.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="efficient">{{localize "cleenmain.bonus.efficient.label"}}</label>
+      <input type="number" id="efficient" name="efficient" min="0" max="10" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.bonus.efficient.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="cover">{{localize "cleenmain.bonus.cover.label"}}</label>
+      <input type="number" id="cover" name="cover" min="0" max="10" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.bonus.cover.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="quick">{{localize "cleenmain.bonus.quick.label"}}</label>
+      <input type="number" id="quick" name="quick" min="0" max="1" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.bonus.quick.description"}}</span>
+    </div>
+  </div>
+  <div class="bonus">
+    <h2>{{localize "cleenmain.dialog.penalty"}}</h2>
+  </div>
+  <div class="bonus-block paddingend">
+    <div class="bonus-line tooltip">
+      <label for="lightwound">{{localize "cleenmain.penalty.lightwound.label"}}</label>
+      <input type="number" id="lightwound" name="lightwound" min="0" max="1" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.penalty.lightwound.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="exposed">{{localize "cleenmain.penalty.exposed.label"}}</label>
+      <input type="number" id="exposed" name="exposed" min="0" max="10" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.penalty.exposed.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="difficulty">{{localize "cleenmain.penalty.difficulty.label"}}</label>
+      <input type="number" id="difficulty" name="difficulty" min="0" max="10" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.penalty.difficulty.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="slow">{{localize "cleenmain.penalty.slow.label"}}</label>
+      <input type="number" id="slow" name="slow" min="0" max="1" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.penalty.slow.description"}}</span>
+    </div>
+    <div class="bonus-line tooltip">
+      <label for="jeopardy">{{localize "cleenmain.penalty.jeopardy.label"}}</label>
+      <input type="number" id="jeopardy" name="jeopardy" min="0" max="10" value="0"/>
+      <span class="tooltiptext">{{localize "cleenmain.penalty.jeopardy.description"}}</span>
+    </div>
+  </div>
+  {{/if}}
 </div>
