--- a/less/config.less
+++ b/less/config.less
@@ -29,10 +29,18 @@
 @boon-color: #51602f;
 @icon-color: rgb(112, 90, 16);
 @clear-background: #fffdfc;
+@chat-introtext: black;
+@chat-formulatext: white;
+@chat-finaltext: white;
+@chat-modifiertext: rgb(206, 233, 86);
+
 
 
 //size
 @editor-height: 5em;
 
-//background image
-@chat-background: 'url(../asset/image/Encart_bleu.webp)';
+//images
+@playersheet-background: no-repeat url('./assets/image/paxelfica-fondfdp.webp');
+@npcsheet-background: no-repeat url('./assets/image/paxelfica-fondfdp.webp');
+@chat-background: no-repeat url('./assets/image/chat_background.webp');
+@chat-divider: top/50% no-repeat url('./assets/image/Deco_feuilles.webp');
