--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -6,9 +6,9 @@
         width: 12em;
     }
     .window-content {
-        background: no-repeat url('./assets/image/paxelfica-fondfdp.webp');
+        background: @npcsheet-background;
         background-color: @clear-background;
-        font-family: "Museo Slab";
+        font-family: @default-font;
         input {
             color: @core-main-color;
         }
