--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -1,6 +1,6 @@
 .cleenmain.sheet.player {
     .window-content {
-        background: no-repeat url('./assets/image/paxelfica-fondfdp.webp');
+        background: @playersheet-background;
         background-color: @clear-background;
     }
     textarea {
