--- a/less/tab/player-boons.less
+++ b/less/tab/player-boons.less
@@ -12,13 +12,16 @@
             height: fit-content;
             width: 50%;
             padding: 1em 0.5em 0 0.5em;
-                .boon-name-line{
-                    font-size: 1rem;
-                    height: fit-content;
-                    .boon-name{
-                        color: @boon-color;
-                    }
+            .boon-name-line{
+                font-size: 1rem;
+                height: fit-content;
+                .boon-name{
+                    color: @boon-color;
                 }
+            }
+            .icon-group{
+                margin-left: auto;
+            }
         }
     }
 }
