--- a/templates/sheets/tab/player-boons.html
+++ b/templates/sheets/tab/player-boons.html
@@ -1,5 +1,5 @@
 <div class="boons-tab">
-    {{#if ../unlocked}}
+    {{#if unlocked}}
     <h1>
         <a class="item-create" data-type="boon" title="{{localize "cleenmain.boon.add"}}">
             <i class="fas fa-plus"></i>
