--- a/templates/sheets/armor-sheet.html
+++ b/templates/sheets/armor-sheet.html
@@ -8,6 +8,7 @@
             <tr>
                 <th>{{localize "cleenmain.label.category"}}</th>
                 <th>{{localize "cleenmain.armor.protection"}}</th>
+                <th>{{localize "cleenmain.armor.malus"}}</th>
                 <th>{{localize "cleenmain.armor.special"}}</th>
                 <th>{{localize "cleenmain.armor.quality"}}</th>
             </tr>
@@ -22,6 +23,9 @@
             </td>
             <td>
                 <input name="data.protection" type="text" value="{{data.protection}}" />
+            </td>
+            <td>
+                <input name="data.malus" type="number" value="{{data.malus}}" />
             </td>
             <td>
                 <input name="data.special" type="text" value="{{data.special}}" />
