--- a/templates/sheets/tab/player-combat.html
+++ b/templates/sheets/tab/player-combat.html
@@ -64,7 +64,7 @@
     <div class="armors">
         <table>
             <tr>
-                <th>{{localize "cleenmain.label.nom"}}</th>
+                <th>{{localize "cleenmain.label.armors"}}</th>
                 <th>{{localize "cleenmain.label.category"}}</th>
                 <th>{{localize "cleenmain.armor.protection"}}</th>
                 <th>{{localize "cleenmain.armor.malus"}}</th>
@@ -83,7 +83,7 @@
                 {{item.data.data.protection}}
             </th>
             <th>
-                {{item.data.data.damage}}
+                {{item.data.data.malus}}
             </th>
             <th>
                 {{item.data.data.special}}
