--- a/templates/actor/tab/combat.html
+++ b/templates/actor/tab/combat.html
@@ -14,11 +14,7 @@
     <div class="trainings-list">
         <div class="trainings-group">
             {{#if unlocked}}
-                {{#if data.trainings.armors.war}}
-                <input name="data.trainings.armors.war" value="{{data.trainings.armors.war}}" type="checkbox" value="1" checked/>
-                {{else}}
-                <input name="data.trainings.armors.war" value="{{data.trainings.armors.war}}" type="checkbox" value="0" />
-                {{/if}}
+                <input class="checkbox" name="data.trainings.armors.war" type="checkbox" {{checked data.trainings.armors.war}}>
             {{else}}
                 {{#if data.trainings.armors.war}}
                 <i class="fas fa-square"></i>
@@ -30,11 +26,7 @@
         </div>
         <div class="trainings-group">
             {{#if unlocked}}
-                {{#if data.trainings.armors.heavy}}
-                <input name="data.trainings.armors.heavy" value="{{data.trainings.armors.heavy}}" type="checkbox" value="1" checked/>
-                {{else}}
-                <input name="data.trainings.armors.heavy" value="{{data.trainings.armors.heavy}}" type="checkbox" value="0" />
-                {{/if}}
+            <input class="checkbox" name="data.trainings.armors.heavy" type="checkbox" {{checked data.trainings.armors.heavy}}>
             {{else}}
                 {{#if data.trainings.armors.heavy}}
                 <i class="fas fa-square"></i>
@@ -46,11 +38,7 @@
         </div>
         <div class="trainings-group">
             {{#if unlocked}}
-                {{#if data.trainings.armors.shield}}
-                <input name="data.trainings.armors.shield" value="{{data.trainings.armors.shield}}" type="checkbox" value="1" checked/>
-                {{else}}
-                <input name="data.trainings.armors.shield" value="{{data.trainings.armors.shield}}" type="checkbox" value="0" />
-                {{/if}}
+            <input class="checkbox" name="data.trainings.armors.shield" type="checkbox" {{checked data.trainings.armors.shield}}>
             {{else}}
                 {{#if data.trainings.armors.shield}}
                 <i class="fas fa-square"></i>
@@ -114,11 +102,7 @@
     <div class="trainings-list">
         <div class="trainings-group">
             {{#if unlocked}}
-                {{#if data.trainings.weapons.war}}
-                <input name="data.trainings.weapons.war" value="{{data.trainings.weapons.war}}" type="checkbox" value="1" checked/>
-                {{else}}
-                <input name="data.trainings.weapons.war" value="{{data.trainings.weapons.war}}" type="checkbox" value="0" />
-                {{/if}}
+            <input class="checkbox" name="data.trainings.weapons.war" type="checkbox" {{checked data.trainings.weapons.war}}>
             {{else}}
                 {{#if data.trainings.weapons.war}}
                 <i class="fas fa-square"></i>
@@ -130,11 +114,7 @@
         </div>
         <div class="trainings-group">
             {{#if unlocked}}
-                {{#if data.trainings.weapons.heavy}}
-                <input name="data.trainings.weapons.heavy" value="{{data.trainings.weapons.heavy}}" type="checkbox" value="1" checked/>
-                {{else}}
-                <input name="data.trainings.weapons.heavy" value="{{data.trainings.weapons.heavy}}" type="checkbox" value="0" />
-                {{/if}}
+            <input class="checkbox" name="data.trainings.weapons.heavy" type="checkbox" {{checked data.trainings.weapons.heavy}}>
             {{else}}
                 {{#if data.trainings.weapons.heavy}}
                 <i class="fas fa-square"></i>
