--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -2,9 +2,28 @@
     .window-content {
         background: @playersheet-background;
         background-color: @clear-background;
+        font-family: @default-font;
     }
     textarea {
         resize: none;
+    }
+    .editor {
+        height: 100%;
+        width: 100%;
+        background:@edit-background;
+        box-shadow: inset 0 0 6px black;
+    }
+    input {
+        background-color: @edit-background;
+        box-shadow: inset 0 0 3px black;
+    }
+    input:focus {
+        background-color: @editactive-background;
+    }
+    select{
+        background-color: @edit-background;
+        box-shadow: inset 0 0 3px black;
+        height: 1.5em;
     }
     form {
         display: flex;
@@ -73,6 +92,9 @@
                     .space-between{
                         justify-content: space-between;}
                     .central-line{
+                        font-family: @default-font;
+                        font-size: 1rem;
+                        font-weight: bold;
                         display: flex;
                         flex-flow: row nowrap;
                         margin: 0.5em;
@@ -137,5 +159,10 @@
                 background: @clear-background;
             }
         }
+    }
+    .right-icon{
+        font-family: @default-font;
+        font-size: 1.2rem;
+        color: @icon-color;
     }
 }
