--- a/less/tab/player-boons.less
+++ b/less/tab/player-boons.less
@@ -19,6 +19,12 @@
                     color: @boon-color;
                 }
             }
+            .boon-description{
+                background: @booncard-background;
+                padding: 0.5em;
+                box-shadow: inset 0 0 3px black;
+                color: @font-color-booncard;
+            }
             .icon-group{
                 margin-left: auto;
             }
