--- a/less/weapon-sheet.less
+++ b/less/weapon-sheet.less
@@ -7,12 +7,13 @@
         height: 100%;
         display: flex;
         flex-direction: column;
+        
+        select{
+            margin: 0 .5em 0 0;
+        }
         .boon-line{
             display: flex;
             flex-direction: row;
-        }
-        .editor {
-            height: 100%;
         }
     }
 }
