--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -53,11 +53,15 @@
                 display: flex;
                 flex-direction: column;
                 flex-basis: 70%;
-                select{
-                    margin: 0.5em 0.5em;
-                    width:12em;
-                    height:auto;
+                .level-line{
+                    display: flex;
+                    flex-direction: row;
+                    select{
+                        margin: 0.5em 0.5em;
+                        width:12em;
+                        height:auto;
                     }
+                }
                 .weapons{
                     .weapon-line{
                         display: flex;
