--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -14,13 +14,19 @@
         </div>
         <div class="npcstat-block">
             <div class="npcstat-block-left">
-                <select name="data.level">
-                    {{#select data.level}}
-                    {{#each config.npccategory as |name type|}}
-                    <option value="{{type}}">{{localize name}}</option>
-                    {{/each}}
-                    {{/select}}
-                </select>
+                <div class="level-line">
+                    <select name="data.level">
+                        {{#select data.level}}
+                        {{#each config.npccategory as |name type|}}
+                        <option value="{{type}}">{{localize name}}</option>
+                        {{/each}}
+                        {{/select}}
+                    </select>
+                    <div class="elite-block">
+                        <label for="data.elite">{{localize "cleenmain.label.elite"}} : </label>
+                        <input class="checkbox" data-field="data.elite" name="data.elite" type="checkbox" {{checked data.elite}}>
+                    </div>
+                </div>
                 <div class="weapons">
                     {{#if unlocked}}
                     <div class="weapon-line">
@@ -34,7 +40,7 @@
                     <div class="weapon-line">
                         <div class="line-label">{{localize "cleenmain.label.combat"}}</div>
                         <div class="weapon-el">({{name}})</div>
-                        <div class="weapon-el">{{item.data.data.skillvaluenpcelite}} / {{item.data.data.skillvaluenpc}}</div>
+                        <div class="weapon-el">{{item.data.data.skillvaluenpc}} / {{item.data.data.skillvaluenpcelite}}</div>
                         <div class="weapon-el">( {{item.data.data.damage}} {{item.data.data.special}})</div>
                         <div class="right-icon"></div>
                         {{#if ../unlocked}}
